--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ psycopg2-binary = "^2.9.5"
 pydantic = "^1.10.9"
 aiohttp = "^3.8.1"
 python-jose = "^3.3.0"
+pyjwt = "^2.10.1"
+bcrypt = "^4.3.0"
 passlib = "^1.7.4"
 
 [tool.poetry.group.dev.dependencies]
@@ -28,6 +30,8 @@ pytest-asyncio = "^0.20.3"
 httpx = "^0.24.1"
 flake8-docstrings = "^1.7.0"
 flake8-bugbear = "^23.3.23"
+python-dotenv = "^1.0.1"
+python-multipart = "^0.0.20"
 
 [build-system]
 requires = ["poetry-core"]
