--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiosignal==1.3.2
 anyio==4.8.0
 async-timeout==5.0.1
 attrs==25.1.0
+bcrypt==4.3.0
 black==25.1.0
 certifi==2025.1.31
 cfgv==3.4.0
@@ -43,9 +44,12 @@ pycodestyle==2.11.1
 pydantic==1.10.21
 pydocstyle==6.3.0
 pyflakes==3.1.0
+PyJWT==2.10.1
 pytest==7.4.4
 pytest-asyncio==0.20.3
+python-dotenv==1.0.1
 python-jose==3.4.0
+python-multipart==0.0.20
 PyYAML==6.0.2
 rsa==4.9
 ruff==0.9.10
